--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <![endif]-->
   <header>
     <nav class="nav">
-      <a href="/" class="logo"><img src="assets/img/logo.png">
+      <a href="/" class="logo"><img src="assets/img/logo.svg">
         <h1>THEYALOW</h1>
       </a>
       <ul class="nav_links">
@@ -26,52 +26,85 @@
         <li class="nav-item"><a href="#"><img src="assets/img/contact.svg" alt="contact">Contact</a></li>
       </ul>
     </nav>
+    <section id="vidplayer">
+      <div class="arrow prev desktop" style="left: 0;">
+        <img src="assets/img/left-arrow.svg" alt="left-arrow">
+      </div>
+      <img class="mobile" src="assets/img/player@mobile.png" alt="video player">
+      <img class="desktop" src="assets/img/player@desktop.png" alt="video player">
+      <h1 class="offer__title desktop">
+        The cool <span>The minimal</span>
+      </h1>
+      <div class="arrow next desktop" style="right: 0;">
+        <img src="assets/img/left-arrow.svg" alt="right-arrow" style="transform: rotate(180deg)">
+      </div>
+    </section>
   </header>
   <main>
-    <section id="vidplayer">
-      <img src="assets\img\player.png" alt="player">
-    </section>
     <section id="three-icons">
       <div><img src="assets/img/cloud.svg" alt="BETTER DESIGN" style="margin-bottom: 7px"><span>BETTER DESIGN</span>
       </div>
       <div><img src="assets/img/customize.svg" alt="CUSTOMIZE"><span>CUSTOMIZE</span></div>
       <div><img src="assets/img/msg.svg" alt="IT'S FREE"><span>IT'S FREE</span></div>
     </section>
-    <section id="lorem">
-      <div></div>
-      <div></div>
-    </section>
     <section id="ipsum">
-      <div class="slider__first">
-        <div class="slider_text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-          </p>
-          <img src="assets/img/plus.svg" alt="plus">
+      <h2 class="ipsum__title desktop">
+        Lorem ipsum dolor sit amet
+      </h2>
+      <div class="slider">
+        <div class="slider__first">
+          <div class="slider_text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+            </p>
+            <img src="assets/img/plus.svg" class="plus" alt="plus">
+            <div class="slider__data desktop">
+              <span>25</span>
+              <span>April</span>
+            </div>
+          </div>
+          <div class="slider_video"><img src="assets/img/player_sml.png" alt="video monkey + human"></div>
         </div>
-        <div class="slider_video"><img src="assets/img/player_sml.png" alt="video monkey + human"></div>
-      </div>
-      <div class="slider__second slider_twit">
-        <img src="assets/img/twitter.svg" alt="twitter's icon">
-        <div class="twits">
-          <img src="assets/img/twits.png" alt="twits">
-          <form class="form">
-            <input type="text" name="tweet">
-            <button type="submit">Tweet</button>
-          </form>
+        <div class="slider__second slider_twit">
+          <img src="assets/img/twitter.svg" alt="twitter's icon">
+          <img class="plus desktop" src="assets/img/plus.svg" alt="plus">
+          <div class="twits mobile">
+            <img src="assets/img/twits.png" alt="twits">
+            <form class="form">
+              <input type="text" name="tweet">
+              <button type="submit">Tweet</button>
+            </form>
+          </div>
         </div>
       </div>
+      <img src="assets/img/scroll.png" alt="scroll" class="scroll desktop">
     </section>
     <section id="platforms">
       <h2>Lorem ipsum dolor sit amet</h2>
       <div>
         <img src="assets/img/devices.png" alt="platforms">
         <span>IT'S 100% FREE</span>
+        <div class="desktop">
+          <ul>
+            <li>
+              <p>Sed ut perspiciatis unde omnis</p>
+            </li>
+            <li>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
+            </li>
+            <li>
+              <p>Sed ut perspiciatis unde omnis</p>
+            </li>
+            <li>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
   </main>
   <footer>
-    <img src="assets/img/logo.png" width="31px" height="31px"><span>THEYALOW</span>
+    <img src="assets/img/logo.svg" width="31px" height="31px"><span>THEYALOW</span>
   </footer>
 </body>
 
